Prevent wrapping on <code> elements

--- a/source/assets/stylesheets/application.css.sass
+++ b/source/assets/stylesheets/application.css.sass
@@ -95,3 +95,5 @@ header
 pre, code
   background-color: $color-light-sand
   font-family: $source-code-font-family
+code
+  white-space: nowrap
